Search block - Fixed search on search pages and adjusted UI on mobile and tab

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1967,10 +1967,6 @@ body.overflow-hidden {
   }
 }
 
-.pagination-row {
-  display: none !important;
-}
-
 .hide {
   display: none !important;
 }
@@ -11489,6 +11485,16 @@ predictive-search.search_open {
   top: 90px;
   background: #fff;
 }
+@media (max-width: 1023px) {
+  predictive-search.search_open {
+    padding: 10px 0 30px 0;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1199px) {
+  predictive-search.search_open {
+    padding: 0 0 50px 0;
+  }
+}
 predictive-search .search_section {
   width: 100%;
   margin: 60px auto;
@@ -11516,19 +11522,34 @@ predictive-search .search_section .search_block {
   display: flex;
   position: relative;
 }
+@media (max-width: 1023px) {
+  predictive-search .search_section .search_block {
+    position: unset;
+  }
+}
 predictive-search .search_section .search_block .search_input {
   position: relative;
   width: 40%;
   margin: 0 auto;
+}
+@media (max-width: 1023px) {
+  predictive-search .search_section .search_block .search_input {
+    width: 100%;
+  }
 }
 predictive-search .search_section .search_block .search_input #Search {
   width: 100%;
 }
 predictive-search .search_section .search_block .search_input .search_icon {
   position: absolute;
-  right: 25px;
+  right: 12%;
   top: 25px;
   transform: translateY(-50%);
+}
+@media (max-width: 1023px) {
+  predictive-search .search_section .search_block .search_input .search_icon {
+    right: 7%;
+  }
 }
 predictive-search .search_section .search_block .blog_search_close_icon {
   cursor: pointer;
@@ -11536,6 +11557,11 @@ predictive-search .search_section .search_block .blog_search_close_icon {
   position: absolute;
   right: 10%;
   transform: translateY(50%);
+}
+@media (max-width: 1023px) {
+  predictive-search .search_section .search_block .blog_search_close_icon {
+    top: 3%;
+  }
 }
 predictive-search #featured_blogs:has(div) {
   height: 100%;
@@ -11551,14 +11577,34 @@ predictive-search #featured_blogs .featured_blogs_content {
   max-width: 80%;
   margin: 0 auto;
 }
+@media (max-width: 1199px) {
+  predictive-search #featured_blogs .featured_blogs_content {
+    max-width: 100%;
+  }
+}
+@media (max-width: 1023px) {
+  predictive-search #featured_blogs .featured_blogs_content {
+    flex-direction: column;
+  }
+}
 predictive-search #featured_blogs .featured_blogs_content .blog-category-item-wrap {
   flex-basis: 33.3333333333%;
+}
+@media (max-width: 767px) {
+  predictive-search #featured_blogs .featured_blogs_content .blog-category-item-wrap {
+    flex-basis: 100%;
+  }
 }
 
 #predictive-search {
   flex-direction: column;
   margin: 0;
   gap: 50px;
+}
+@media (max-width: 1199px) {
+  #predictive-search {
+    gap: 30px;
+  }
 }
 #predictive-search:has(div) {
   height: 100%;
@@ -11572,8 +11618,23 @@ predictive-search #featured_blogs .featured_blogs_content .blog-category-item-wr
   height: fit-content;
   margin: 0 auto;
 }
+@media (max-width: 1199px) {
+  #predictive-search #predictive-search-results {
+    width: 100%;
+  }
+}
 #predictive-search #predictive-search-results .blog-category-item-wrap {
   flex-basis: calc(33.3333333333% - 50px);
+}
+@media (max-width: 767px) {
+  #predictive-search #predictive-search-results .blog-category-item-wrap {
+    flex-basis: 100%;
+  }
+}
+@media (max-width: 1199px) {
+  #predictive-search #predictive-search-results .blog-category-item-wrap {
+    flex-basis: calc(50% - 30px);
+  }
 }
 #predictive-search #search_results_blogs span {
   border: 1px solid #000;
